--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <div class="secimg">
             <img src="./device-pile-in.png">
             <video src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/video-devices-in.m4v"
-                controls autoplay loop></video>
+            muted autoplay loop></video>
     </section>
     <div class="line"></div>
     <section class="first fourth">
