--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div class="secimg">
             <img src="./tv.png">
             <video src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/video-tv-in-0819.m4v"
-                autoplay loop></video>
+               muted autoplay loop></video>
         </div>
     </section>
     <div class="line"></div>
